--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,16 +1,15 @@
 .about_container {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 400px);
     align-items: center;
-    column-gap: 4rem;
+    column-gap: 0rem;
     margin-top: 70px;
   }
   .about_img {
-    width: 400px;
-    height: 380px;
+    width: auto;
+    height: 400px;
     border-radius: 1.5rem;
     justify-self: center;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
+    
   }
   
   .about_info {
