--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -58,7 +58,7 @@
     }
   
     .about_img {
-      width: 400px;
+      width: auto;
       height: 400px;
     }
   
@@ -92,7 +92,7 @@
     padding: 0;
    }
    .about_img {
-    width: 300px;
+    width: auto;
     height: 300px;
   }
   }
@@ -104,7 +104,7 @@
       height: 100vh;
     }
     .about_img {
-      width: 200px;
+      width: auto;
       height: 200px;
     }
   }
